<resources>
    <string name="app_name">InternshipPractice</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello activity A</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_second_activity">Hello from activity B</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="title_activity_c">C</string>
    <string name="ok">OK</string>
    <string name="canceled">CANCELED</string>
    <string name="start_activity_result">start Activity For Result</string>
    <string name="register_launch">Register/Launch</string>
</resources>